A major step forward towards Takagi-Sugeno rules.

--- a/webfuzzylite/index.html
+++ b/webfuzzylite/index.html
@@ -23,7 +23,7 @@
 
 <body>
 <h1>
-fuzzylite: A Fuzzy Logic Control Library written in C++
+fuzzylite: A Fuzzy Logic Control Library and Application written in C++
 </h1>
 </body>
 
